# cpp-v8-typescript-example

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  sample_typescript.ts
